Improve contrast (fixes #80) (#84)

--- a/src/assets/styles/components/_badges.scss
+++ b/src/assets/styles/components/_badges.scss
@@ -11,7 +11,7 @@
 	background: $grey-200;
 	border: solid rem(1) $grey-200;
 	border-radius: rem(3);
-	color: $grey-500;
+	color: $grey-600;
 	display: inline-block;
 	font-family: $font-family-sans;
 	font-size: rem(14);
